# portrait-analyser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: build.yml
src/portrait_analyser/: __init__.py  __main__.py  extended_neck.py  face.py  incisor.py  ios.py  mouth.py  neck.py  pose.py  tmd.py
tests/: conftest.py  heic_depth_data.heic  heic_face_data.heic  test_apple.py  test_face.py  test_incisor_centroids.py  test_neck.py  test_pose.py  test_segmentation.py
